--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,15 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+//apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 33
-    buildToolsVersion "30.0.2"
 
     defaultConfig {
         applicationId "com.leejordan.wheatonbeacon"
         minSdkVersion 22
-        targetSdkVersion 33
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
@@ -29,16 +28,18 @@ android {
             compose = true
         }
 
-        composeOptions {
-            kotlinCompilerExtensionVersion = "1.1.0"
-        }
-
+//        composeOptions {
+//            kotlinCompilerExtensionVersion = "1.4.0"
+//        }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 
 }
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+//    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -74,5 +75,8 @@ dependencies {
     implementation("androidx.compose.runtime:runtime-livedata")
     implementation("androidx.compose.runtime:runtime-rxjava2")
 
+    implementation ("androidx.compose.runtime:runtime:1.2.0")
+    implementation ("androidx.compose.compiler:compiler:1.2.0")
+    implementation("androidx.compose.ui:ui:1.3.3")
 
 }
