Fixed namespace error Ignoring the absence of ".MainActivity" Added a TODO

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.leejordan.wheatonbeacon">
-
+    xmlns:tools="http://schemas.android.com/tools"
+    package="org.jetbrains.plugins.gradle.model.ProjectImportAction.addBuildModels">
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <!--Todo: add .MainActivity OR rename attribute -->
         <activity android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            tools:ignore="MissingClass">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
